{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 30,
  "lineage": "79e7f2a6-2802-fa7c-5385-9200c123c0b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9502e8956223fc3",
            "association_id": "eipassoc-062884d07b3412ad2",
            "domain": "vpc",
            "id": "eipalloc-0d9502e8956223fc3",
            "network_border_group": "us-west-1",
            "network_interface": "eni-091f7c8b9f0924f65",
            "private_dns": "ip-10-0-15-99.us-west-1.compute.internal",
            "private_ip": "10.0.15.99",
            "public_dns": "ec2-52-52-158-141.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.158.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:internet-gateway/igw-07344387ce02676b6",
            "id": "igw-07344387ce02676b6",
            "owner_id": "450183644535",
            "tags": {
              "Name": "CPF IG"
            },
            "tags_all": {
              "Name": "CPF IG"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9502e8956223fc3",
            "connectivity_type": "public",
            "id": "nat-02afc2842fde79e72",
            "network_interface_id": "eni-091f7c8b9f0924f65",
            "private_ip": "10.0.15.99",
            "public_ip": "52.52.158.141",
            "subnet_id": "subnet-044851ca6fe119e25",
            "tags": {
              "Name": "NAT Gateway CPF"
            },
            "tags_all": {
              "Name": "NAT Gateway CPF"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privet-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:route-table/rtb-082467a2229a48f04",
            "id": "rtb-082467a2229a48f04",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02afc2842fde79e72",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Privet Route Table CPF"
            },
            "tags_all": {
              "Name": "Privet Route Table CPF"
            },
            "timeouts": null,
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:route-table/rtb-067fe362ebc5c3379",
            "id": "rtb-067fe362ebc5c3379",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07344387ce02676b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table CPF"
            },
            "tags_all": {
              "Name": "Public Route Table CPF"
            },
            "timeouts": null,
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "APR",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081f526268adc5902",
            "route_table_id": "rtb-082467a2229a48f04",
            "subnet_id": "subnet-04451fc774b23074c"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.privet-router",
            "aws_subnet.privet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cdf381915fd92c",
            "route_table_id": "rtb-067fe362ebc5c3379",
            "subnet_id": "subnet-044851ca6fe119e25"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-router",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Privet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:subnet/subnet-0389fc613a17a4337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0389fc613a17a4337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CPF-privet-1c"
            },
            "tags_all": {
              "Name": "CPF-privet-1c"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:subnet/subnet-04451fc774b23074c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04451fc774b23074c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CPF-privet-1a"
            },
            "tags_all": {
              "Name": "CPF-privet-1a"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:subnet/subnet-00ca6d890470e73aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca6d890470e73aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CPF-privet-1b"
            },
            "tags_all": {
              "Name": "CPF-privet-1b"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:subnet/subnet-044851ca6fe119e25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044851ca6fe119e25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CPF public 1a"
            },
            "tags_all": {
              "Name": "CPF public 1a"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:subnet/subnet-016c9004236bf79e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c9004236bf79e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CPF-public-1b"
            },
            "tags_all": {
              "Name": "CPF-public-1b"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:subnet/subnet-0098978750d63faef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0098978750d63faef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CPF-public-1c"
            },
            "tags_all": {
              "Name": "CPF-public-1c"
            },
            "vpc_id": "vpc-011b20a2a4e638cc3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:450183644535:vpc/vpc-011b20a2a4e638cc3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4c97ed4600c9c89",
            "default_route_table_id": "rtb-0a18486968abc518c",
            "default_security_group_id": "sg-0e932f0c62ce33c87",
            "dhcp_options_id": "dopt-00ab2b628831382fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-011b20a2a4e638cc3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a18486968abc518c",
            "owner_id": "450183644535",
            "tags": {
              "Name": "Terraform 5000"
            },
            "tags_all": {
              "Name": "Terraform 5000"
            }
          }
        }
      ]
    }
  ]
}